--- a/Messager/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Messager/Views/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="W0F-d1-3Is">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Conversations View Controller-->
+        <!--Chats-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConversationsViewController" customModule="Messager" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,10 +19,96 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Chats" id="mPt-At-jn4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="98"/>
+            <point key="canvasLocation" x="19" y="976"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="WUp-Je-Yk3">
+            <objects>
+                <viewController id="cEw-2p-xaf" customClass="ProfileViewController" customModule="Messager" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iK5-2s-CGd">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dWp-ks-3Sj">
+                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="BH3-oW-uff"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="BH3-oW-uff" firstAttribute="bottom" secondItem="dWp-ks-3Sj" secondAttribute="bottom" id="COk-mX-HcB"/>
+                            <constraint firstItem="dWp-ks-3Sj" firstAttribute="top" secondItem="BH3-oW-uff" secondAttribute="top" id="UML-Ck-dOZ"/>
+                            <constraint firstItem="BH3-oW-uff" firstAttribute="trailing" secondItem="dWp-ks-3Sj" secondAttribute="trailing" id="dtt-p2-hTY"/>
+                            <constraint firstItem="dWp-ks-3Sj" firstAttribute="leading" secondItem="BH3-oW-uff" secondAttribute="leading" id="lrg-vr-tpY"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Profile" id="ZiU-Cn-jcZ"/>
+                    <connections>
+                        <outlet property="tableView" destination="dWp-ks-3Sj" id="BoA-ZL-qAw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Au9-BG-Ds4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1232" y="976"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="pwS-XZ-xjC">
+            <objects>
+                <tabBarController id="W0F-d1-3Is" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OEI-GP-4wz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Czd-K6-Db6" kind="relationship" relationship="viewControllers" id="5aj-T7-sEC"/>
+                        <segue destination="Tz7-qM-2Ca" kind="relationship" relationship="viewControllers" id="vGi-Ow-kqy"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8pE-XO-3is" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="572" y="-665"/>
+        </scene>
+        <!--Chats-->
+        <scene sceneID="5zp-XG-dPD">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Czd-K6-Db6" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Chats" id="Xco-yV-ptz"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Rpc-5g-nAy">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="wGn-d6-0ci"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MDl-7H-q6q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="97.767857142857139"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="U5i-4z-EJA">
+            <objects>
+                <navigationController id="Tz7-qM-2Ca" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" id="XPM-Qr-Pqn"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="SWY-Jc-kxl">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="cEw-2p-xaf" kind="relationship" relationship="rootViewController" id="6QY-MK-o0c"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7eX-QT-6XY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1233" y="98"/>
         </scene>
     </scenes>
     <resources>
